@@ -1,3 +1,8 @@
+2015-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* mpost.[ch]: Extern check_for_mp() moved from here ...
+	* pdfximage.c: ... to here as static.
+
 2015-08-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* dvi.c: Introduce a new static function static int is_notdef_notzero()
